# FamilyThings

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
accomplishment/: admin.py  apps.py  constants.py  requests.py  tests.py  urls.py  views.py
accomplishment/commands/: accomp_generate__test_data.py
accomplishment/forms/: __init__.py  accomplishment.py
accomplishment/migrations/: 0001_initial.py  0002_alter_accomplishment_id.py  0002_alter_accomplishment_options_and_more.py  0002_initial.py  0003_remove_accomplishment_measurement_and_more.py  0004_alter_familyuseraccomplishment_measurement_quantity.py  0005_alter_familyuseraccomplishment_accomplishment_id_and_more.py  0006_alter_accomplishment_description.py  0007_alter_accomplishment_description.py
accomplishment/models/: __init__.py  accomplishment.py  accomplishment_type.py  family_user_accomplishment.py  measurement_type.py
accomplishment/templates/: accomp_add_new.html  accomp_edit_details.html  accomp_overview.html  accomp_popup_edit_accomp.html  accomp_popup_edit_template.html  accomp_popup_name_prompt.html  accomp_popup_new_accomp.html  accomp_popup_repeat_accomp.html  js_accomp_create_accomp_prompt.js  js_accomp_edit_accomp_prompt.js  (+14 more)
config/: settings.py  urls.py
core/: admin.py  constants.py  models.py  requests.py  session.py  tests.py  urls.py  user_auth.py  views.py
documentation/: Project Brief.md
finance/: admin.py  tables.py  urls.py  views.py
ft_calendar/: admin.py  apps.py  models.py  urls.py  views.py
messenger/: admin.py
testing/: testingTextChoices.py
(+208 files in other folders)
