[project]
name = "familythings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "django-tables2>=2.7.5",
    "faker>=37.11.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
